# bitspire-learn

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  proxy.py  pyproject.toml
.github/: copilot-instructions.md
.github/skills/compact-documentation/: SKILL.md
.github/skills/document-learning-draft/: SKILL.md
docs/: _config.yml  analytics.md  architecture.md  configuration.md  database.md  deployment.md  index.md  request-insights.md  self-improvement.md
docs/draft/: 2026-04-27-agents-routes-missing-from-copilot-prefixes.md  2026-04-27-agents-routes-wrong-upstream.md  2026-04-27-all-proxy-responses-are-plain-response.md  2026-04-27-body-reading-encapsulated-in-logging-service.md  2026-04-27-ping-and-responses-routes-missing.md  2026-04-27-transparent-forward-proxy.md  httpx-http2-upstream-client-draft.md  move-source-to-src-draft.md  payload-parsing-draft.md  proxy-features-draft.md  proxy-route-simplification-draft.md  proxy-url-construction-draft.md
docs/features/: analytics-dashboard.md  proxy-service.md  proxy-unit-testing.md
docs/proxy-service/: index.md  unit-testing.md
src/: main.py  ui.py
src/api/: deps.py
src/api/routes/: health.py  proxy.py
src/core/: config.py  db.py
src/middleware/: __init__.py  logging.py
src/models/: __init__.py  prompt.py  request_log.py  response_log.py  route.py  user.py
src/repositories/: __init__.py  base.py  health.py  prompt.py  request_log.py  response_log.py  route.py  user.py
src/services/: __init__.py  logging.py  request_insight.py  user_resolution.py
tests/: test_proxy.py
(+2 files in other folders)
