[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-proxy"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx[http2]",
    "pandas",
    "streamlit",
    "sseclient-py",
    "sqlalchemy",
    "psycopg2-binary",
    "asyncpg",
    "aiosqlite",
    "python-dotenv",
    "pydantic-settings",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]
